ch(Improvement): change font family change bus map booked seat color clean code and refactor [Finishes #167627318]

--- a/UI/css/stylesheet.css
+++ b/UI/css/stylesheet.css
@@ -6,7 +6,7 @@
 
 html,
 body {
-    font: 100%/1.5 Tahoma,cursive ,Helvetica, sans-serif;
+    font: 100%/1.5 Tahoma ,Helvetica, sans-serif;
 }
 
 /*--- Start Globals ---*/
@@ -873,7 +873,9 @@ header .navbar {
     border-top: 0.50px solid white;
     padding: 0.5rem 0;
 }
-
+.tabcontent{
+    display: none;
+}
 /*--- End footer ---*/
 
 
@@ -909,7 +911,6 @@ header .navbar {
     color: #000;
     padding: 1rem;
     border-radius: 50%;
-    font-family: cursive;
     font-weight: 700;
 }
 
@@ -967,10 +968,13 @@ header .navbar {
     padding: 1rem;
     border-top-left-radius: 15px;
     border-bottom-right-radius: 15px;
-    font-family: cursive;
     font-weight: 700;
 }
 
+#aria-view-more{
+    display: none;
+    transition: all 1s ease-in;
+}
 /* ******************************** */
 /* ******* start Book a seat  ***************/
 /* ********************************** */
@@ -980,7 +984,9 @@ header .navbar {
 }
 
 #booked {
-    background: #dc3545;
+    background: #FF6347;
+    color: #fff;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.5);
 }
 
 .bus_seats,
@@ -998,7 +1004,10 @@ header .navbar {
     -moz-border-radius: 5px;
     -o-border-radius: 5px;
 }
-
+.picked{
+    background: #000;
+    color: #fff;
+}
 /* Style bus map buttons */
 [data-trip-seat] {
     padding: 5px;
@@ -1039,8 +1048,6 @@ header .navbar {
 
 /******** *****************************
 **************END DASHBOARD ***********/
-
-
 
 /* Media queries */
 @media screen and (min-width: 576px) {
