--- a/UI/css/stylesheet.css
+++ b/UI/css/stylesheet.css
@@ -119,7 +119,12 @@ a:active {
     border: 1px solid !important;
     outline-width: 1px !important;
 }
-
+/* Update */
+.btn-cancel-reset{
+    border: 1px ridge #eeeeee !important;
+    color: #eeeeee !important;
+    background-color: #0077b5 !important;
+}
 input[type=text],
 input[type=email],
 input[type=password],
@@ -211,10 +216,13 @@ textarea {
     display: flex;
     flex-direction: row;
 }
-
+/* Update */
+.reset-link{
+    text-align: center;
+}
 
 .bg-image {
-    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../assets/images/bg.png") center/cover no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url("../assets/images/trip4.jpg") center/cover no-repeat fixed;
     min-height: 380px;
     position: relative;
 }
@@ -286,7 +294,10 @@ textarea {
 .box-shadowed {
     box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.5);
 }
-
+/* UPDATE */
+.hidden-responsive{
+    display: none !important;
+}
 /*--- End Globals ---*/
 
 /*--- Start Header --- */
@@ -1049,6 +1060,23 @@ header .navbar {
 /******** *****************************
 **************END DASHBOARD ***********/
 
+/* UPDATE SIGNUP AND SIGNIN */
+#login-form span, #signup-form span, #reset-form span{
+    position: absolute;
+    margin-top: -1rem;
+}
+.border-radius{
+    border-radius: 10px;
+}
+#login-form button{
+    margin-top: 1.1rem;
+    background: #000;
+}
+
+/* NEW FEATURE, RESET PASSWORD */
+#reset-form .col-md-2{
+    margin: 0.6rem 0;
+}
 /* Media queries */
 @media screen and (min-width: 576px) {
     .container {
@@ -1128,6 +1156,11 @@ header .navbar {
         right: 6%;
         transition: 1s;
     }
+    /* UPDATE HOME NAV BAR */
+    #home-nav .navbar-list li{
+        display: inline-block;
+        padding: 1px;
+    }
 }
 
 @media screen and (max-width: 360px) {
@@ -1186,5 +1219,24 @@ header .navbar {
 
     input[type=checkbox]:checked~.tab {
         display: block;
+    }
+}
+
+@media screen and (max-width: 387px){
+    /* UPDATE HOME NAV BAR */
+    .display-on-full{
+        display: none !important;
+    }
+    .hidden-responsive{
+        display: inline-block !important;
+    }
+}
+/* Gallery extended media queries. UPDATE */
+@media screen and (min-width: 2560px){
+    /* UPDATE HOME NAV BAR */
+    .gallery-container{
+        display: flex;
+        align-items: baseline;
+        justify-content: center;
     }
 }
