ch(update-ui) : Delivers completed changes on CSS and HTML
- add link to css pages
- add new css style.
- add all.css files
[Delivers #167728722]

--- a/UI/css/homepage.css
+++ b/UI/css/homepage.css
@@ -398,3 +398,12 @@
         display: block;
     }
 }
+
+@media screen and (max-width: 387px){
+    .display-on-full{
+        display: none !important;
+    }
+    .hidden-responsive{
+        display: inline-block !important;
+    }
+}
